--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -89,9 +89,9 @@
                                 <group col="2">
                                     <field name="jianyishejibumen_id" readonly="1"/>
                                     <field name="jianyixiangmufuzeren_id" readonly="1"/>
-                                    <field name="shifoutoubiao" readonly="1"/>
+                                    <!--field name="shifoutoubiao" readonly="1"/>
                                     <field name="toubiaoleibie" attrs="{'invisible':[('shifoutoubiao','=',False)]}"
-                                           readonly="1"/>
+                                           readonly="1"/-->
                                 </group>
                                 <group col="4">
                                     <field name="waibao" readonly="1"/>
