--- a/up_project/wizard/zongshishi.xml
+++ b/up_project/wizard/zongshishi.xml
@@ -6,23 +6,33 @@
             <field name="model">project.review.zongshishishenpi.form</field>
             <field name="arch" type="xml">
                 <form string="zongshishishenpi" version="7.0">
-                    <group string="总师室指定项目负责人">
-                        <field name="toubiaoleibie" />
-                        <field name="guanlijibie" />
-                        <field name="chenjiefuzeren_id" />
-                        <field name="zhuguanzongshi_id" />
-                        <field name="categories_id" />
+                    <group col="2">
+                        <group colspan="2">
+                            <group>
+                                <field name="toubiaoleibie" required="1"/>
+                                <field name="guanlijibie" required="1"/>
+                                <field name="chenjiefuzeren_id" required="1" class="oe_no_button"
+                                       options="{'no_open':True}"/>
+                                <field name="zhuguanzongshi_id" required="1"
+                                       domain="[('groups_id','=',%(group_up_project_zongshishi)d)]"/>
+                            </group>
+                            <group>
+                                <field name="categories_id"/>
+                            </group>
+                        </group>
+
+                        <!-- <group string="通知设置">
+                            <field name="send_email" />
+                            <field name="send_sms" />
+                        </group>
+                        <group string="Review Comment">
+                            <field name="review_log"/>
+                            <field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_zongshishi)d)]"
+                                    />
+                            <field name="comment"/>
+                        </group>-->
                     </group>
-                    <!-- <group string="通知设置">
-                        <field name="send_email" />
-                        <field name="send_sms" />
-                    </group> -->
-                    <group string="Review Comment">
-                        <field name="review_log"/>
-                        <field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_zongshishi)d)]"
-                               />
-                        <field name="comment"/>
-                    </group>
+
                     <footer>
                         <button name="save" class="oe_highlight" string="Save"/>
                         <button name="zongshishi_review_submit" string="提交所长" type="object"
@@ -39,8 +49,28 @@
             <field name="inherit_id" ref="edit_project_inherit"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='state']" position="before">
-                    <button name="action_zongshishishenpi" string="总师室审批申请单" states="zhidingfuzeren" type="object"/>
-                    <button name="jingyinshi_reject" string="打回申请单" states="zhidingfuzeren"/>
+                    <button name="action_zongshishishenpi" class="oe_highlight"
+                            groups="up_project.group_up_project_zongshishi" string="总师室审批申请单" states="zhidingfuzeren"
+                            type="object"/>
+                    <button name="jingyinshi_reject" string="打回申请单" groups="up_project.group_up_project_zongshishi"
+                            states="zhidingfuzeren"/>
+                </xpath>
+                <xpath expr="//page[@name='note2']" position="after">
+                    <page string="Zongshishi Info"
+                          attrs="{'invisible':[('state','in',['open','suozhangshenpi','zhidingbumen','zhidingfuzeren'])]}">
+                        <group colspan="2">
+                            <group>
+                                <field name="toubiaoleibie" readonly="1"/>
+                                <field name="guanlijibie" readonly="1"/>
+                                <field name="chenjiefuzeren_id" readonly="1"/>
+                                <field name="zhuguanzongshi_id" readonly="1"/>
+                                <field name="zongshishi_submitter_id" readonly="1"/>
+                            </group>
+                            <group>
+                                <field name="categories_id" readonly="1"/>
+                            </group>
+                        </group>
+                    </page>
                 </xpath>
 
             </field>
