--- a/up_project/wizard/zongshishi.xml
+++ b/up_project/wizard/zongshishi.xml
@@ -13,7 +13,8 @@
                                 <field name="guanlijibie" required="1"/>
                                 <field name="chenjiefuzeren_id" required="1" class="oe_no_button"
                                        options="{'no_open':True}"/>
-                                <field name="zhuguanzongshi_id" required="1"
+                                <field name="zhuguanzongshi_id" required="1" class="oe_no_button"
+                                       options='{"no_open": True}'
                                        domain="[('groups_id','=',%(group_up_project_zongshishi)d)]"/>
                             </group>
                             <group>
@@ -55,6 +56,12 @@
                     <button name="jingyinshi_reject" string="打回申请单" groups="up_project.group_up_project_zongshishi"
                             states="zhidingfuzeren"/>
                 </xpath>
+                <xpath expr="//group[@name='project_num']" position="after">
+                    <group  colspan="2" >
+                        <field name="user_id" readonly="1"
+                               attrs="{'invisible':[('state','in',['open','suozhangshenpi','zhidingbumen','zhidingfuzeren'])]}"/>
+                    </group>
+                </xpath>
                 <xpath expr="//page[@name='note2']" position="after">
                     <page string="Zongshishi Info"
                           attrs="{'invisible':[('state','in',['open','suozhangshenpi','zhidingbumen','zhidingfuzeren'])]}">
@@ -62,7 +69,6 @@
                             <group>
                                 <field name="toubiaoleibie" readonly="1"/>
                                 <field name="guanlijibie" readonly="1"/>
-                                <field name="chenjiefuzeren_id" readonly="1"/>
                                 <field name="zhuguanzongshi_id" readonly="1"/>
                                 <field name="zongshishi_submitter_id" readonly="1"/>
                             </group>
