UPDIS-231 - 项目管理模块的归正 添加project log 到 所长签字未完成

--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -79,7 +79,7 @@
                             type="object"
                             attrs="{'invisible':['|',('is_display_button','!=',True),('state','!=','suozhangshenpi')]}"
                             groups="up_project.group_up_project_suozhang"/>
-                    <button name="draft_reject" string="打回申请单"
+                    <button name="draft_reject" string="打回申请单" type="object"
                             attrs="{'invisible':['|',('is_display_button','!=',True),('state','!=','suozhangshenpi')]}"
                             groups="up_project.group_up_project_suozhang" confirm="Are you sure you want do this?"/>
                 </xpath>
