--- a/up_project/wizard/jingyingshi.xml
+++ b/up_project/wizard/jingyingshi.xml
@@ -41,7 +41,7 @@
                 <xpath expr="//field[@name='state']" position="before">
                     <button name="action_jingyingshishenpi" class="oe_highlight" string="经营室审批申请单" states="zhidingbumen"
                             type="object" groups="up_project.group_up_project_jingyingshi"/>
-                    <button name="suozhangshenpi_reject" string="打回申请单" states="zhidingbumen"
+                    <button name="suozhangshenpi_reject" string="打回申请单" states="zhidingbumen" type="object"
                             groups="up_project.group_up_project_jingyingshi" confirm="Are you sure you want do this?"/>
                 </xpath>
                 <xpath expr="//group[@name='project_num']" position="replace">
