--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -83,8 +83,8 @@
                             attrs="{'invisible':['|',('is_display_button','!=',True),('state','!=','suozhangshenpi')]}"
                             groups="up_project.group_up_project_suozhang" confirm="Are you sure you want do this?"/>
                 </xpath>
-                <xpath expr="//page[@name='note']" position="before" priority="1">
-                    <page string="Apply Info" attrs="{'invisible':[('state','=','open')]}">
+                <xpath expr="//div[@id='director_prove']" position="after" priority="1">
+                    <group attrs="{'invisible':[('state','=','open')]}">
                         <group colspan="2">
                             <group string="Basic Info" col="1">
                                 <group col="2">
@@ -125,7 +125,7 @@
                                 <field name="is_project_creater"/>
                             </group>
                         </group>
-                    </page>
+                    </group>
                 </xpath>
             </field>
         </record>
