--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -13,8 +13,9 @@
                                        options='{"no_open": True}'/>
                                 <field name="jianyixiangmufuzeren_id" required="1" class="oe_no_button"
                                        options='{"no_open": True}'/>
-                                <!--field name="shifoutoubiao"/>
-                                <field name="toubiaoleibie" attrs="{'invisible':[('shifoutoubiao','=',False)]}"/-->
+                                <field name="shifoutoubiao"/>
+                                <field name="toubiaoleibie"
+                                       attrs="{'invisible':[('shifoutoubiao','=',False)],'required':[('shifoutoubiao','=',True)]}"/>
                             </group>
                             <group col="4">
                                 <field name="waibao"/>
@@ -88,11 +89,13 @@
                         <group colspan="2">
                             <group string="Basic Info" col="1">
                                 <group col="2">
-                                    <field name="jianyishejibumen_id" readonly="1"/>
-                                    <field name="jianyixiangmufuzeren_id" readonly="1"/>
-                                    <!--field name="shifoutoubiao" readonly="1"/>
+                                    <field name="jianyishejibumen_id" readonly="1"
+                                           attrs="{'invisible':[('state','not in',['open','suozhangshenpi','zhidingbumen'])]}"/>
+                                    <field name="jianyixiangmufuzeren_id" readonly="1"
+                                           attrs="{'invisible':[('state','not in',['open','suozhangshenpi','zhidingbumen','zhidingfuzeren'])]}"/>
+                                    <field name="shifoutoubiao" readonly="1"/>
                                     <field name="toubiaoleibie" attrs="{'invisible':[('shifoutoubiao','=',False)]}"
-                                           readonly="1"/-->
+                                           readonly="1"/>
                                 </group>
                                 <group col="4">
                                     <field name="waibao" readonly="1"/>
