--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -55,10 +55,10 @@
                     <footer>
                         <button name="save" class="oe_highlight" string="Save"/>
                         <button name="suozhangshenpi_review_submit" string="提交所长审批" states="" type="object"
-                                class="oe_highlight" confirm="Are you sure you want do this?"
+                                class="oe_highlight" confirm="确定提交到所长审批?"
                                 attrs="{'invisible':[('state','!=','open')]}"/>
                         <button name="suozhangshenpi_review_accept" string="审批通过" states="" type="object"
-                                class="oe_highlight" confirm="Are you sure you want do this?"
+                                class="oe_highlight" confirm="确定提交到向经营室审批?"
                                 attrs="{'invisible':[('state','=','open')]}"/>
                         <button string="Cancel" class="oe_link" special="cancel"/>
                     </footer>
@@ -82,7 +82,7 @@
                             groups="up_project.group_up_project_suozhang"/>
                     <button name="draft_reject" string="打回申请单" type="object"
                             attrs="{'invisible':['|',('is_display_button','!=',True),('state','!=','suozhangshenpi')]}"
-                            groups="up_project.group_up_project_suozhang" confirm="Are you sure you want do this?"/>
+                            groups="up_project.group_up_project_suozhang" confirm="确定打回申请到发起人?"/>
                 </xpath>
                 <xpath expr="//div[@id='director_prove']" position="after" priority="1">
                     <group attrs="{'invisible':[('state','=','open')]}">
