UPDIS-231 - 项目管理模块的归正 页面布局修改

--- a/up_project/static/css/up_project.css
+++ b/up_project/static/css/up_project.css
@@ -1,3 +1,9 @@
 .openerp .separate {
     border: 1px solid gainsboro;
 }
+
+.openerp .oe_statusbar_header {
+    display: inline-block;
+    position: relative;
+    margin-left: 800px;
+}
