UPDIS-231 项目管理模块的归正

--- a/up_project/static/css/up_project.css
+++ b/up_project/static/css/up_project.css
@@ -7,3 +7,7 @@
     position: relative;
     margin-left: 800px;
 }
+
+.openerp table.activetable, .openerp table.activetable td, .openerp table.activetable  tr {
+    border: 1px solid #000000;
+}
